tests/cases/errors/runtime_compare_mixed_types.lox
// Comparison operators require two numbers.
// expect runtime error: Operands must be numbers
1 < "x"
